[gd_scene load_steps=12 format=2]

[ext_resource path="res://MenuPrincipal/Pantalla de t√≠tulo sin logo.jpg" type="Texture" id=1]
[ext_resource path="res://Scripts/MenuTitulo.gd" type="Script" id=2]
[ext_resource path="res://MenuPrincipal/BtNuevaPartidaNormal.png" type="Texture" id=3]
[ext_resource path="res://MenuPrincipal/BtNuevaPartidaFocus.png" type="Texture" id=4]
[ext_resource path="res://MenuPrincipal/BtContinuarNormal.png" type="Texture" id=5]
[ext_resource path="res://MenuPrincipal/BtContinuarFocus.png" type="Texture" id=6]
[ext_resource path="res://MenuPrincipal/BtSalirNormal.png" type="Texture" id=7]
[ext_resource path="res://MenuPrincipal/BtSalirFocus.png" type="Texture" id=8]
[ext_resource path="res://MenuPrincipal/Logo.png" type="Texture" id=9]
[ext_resource path="res://Scripts/Logo.gd" type="Script" id=10]

[sub_resource type="Animation" id=1]
resource_name = "Intro"
length = 1.5
tracks/0/type = "value"
tracks/0/path = NodePath("MarginContainerMenuInicio/VBoxBotonesMenuInicio/VBoxLogo/Logo:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( -800, 60 ), Vector2( 0, 60 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("MarginContainerMenuInicio/VBoxBotonesMenuInicio/BtStart:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1, 1.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("MarginContainerMenuInicio/VBoxBotonesMenuInicio/BtContinue:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 1.1, 1.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("MarginContainerMenuInicio/VBoxBotonesMenuInicio/BtSalir:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 1.2, 1.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[node name="Fondo" type="TextureRect"]
margin_right = 40.0
margin_bottom = 40.0
texture = ExtResource( 1 )
script = ExtResource( 2 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "Intro"
playback_speed = 1.2
anims/Intro = SubResource( 1 )

[node name="MarginContainerMenuInicio" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 0
custom_constants/margin_top = 20
custom_constants/margin_left = 0
custom_constants/margin_bottom = 20

[node name="VBoxBotonesMenuInicio" type="VBoxContainer" parent="MarginContainerMenuInicio"]
margin_top = 20.0
margin_right = 1024.0
margin_bottom = 748.0
custom_constants/separation = 16
alignment = 1

[node name="BtStart" type="TextureButton" parent="MarginContainerMenuInicio/VBoxBotonesMenuInicio"]
modulate = Color( 1, 1, 1, 0.333333 )
margin_left = 236.0
margin_top = 42.0
margin_right = 788.0
margin_bottom = 119.0
grow_horizontal = 2
grow_vertical = 2
rect_pivot_offset = Vector2( 150, 0 )
mouse_filter = 2
size_flags_horizontal = 6
texture_normal = ExtResource( 3 )
texture_focused = ExtResource( 4 )

[node name="BtContinue" type="TextureButton" parent="MarginContainerMenuInicio/VBoxBotonesMenuInicio"]
modulate = Color( 1, 1, 1, 0 )
margin_left = 236.0
margin_top = 135.0
margin_right = 788.0
margin_bottom = 212.0
mouse_filter = 2
size_flags_horizontal = 6
size_flags_stretch_ratio = 0.0
texture_normal = ExtResource( 5 )
texture_focused = ExtResource( 6 )

[node name="BtSalir" type="TextureButton" parent="MarginContainerMenuInicio/VBoxBotonesMenuInicio"]
modulate = Color( 1, 1, 1, 0 )
margin_left = 236.0
margin_top = 228.0
margin_right = 788.0
margin_bottom = 305.0
mouse_filter = 2
size_flags_horizontal = 6
texture_normal = ExtResource( 7 )
texture_focused = ExtResource( 8 )

[node name="VBoxLogo" type="VBoxContainer" parent="MarginContainerMenuInicio/VBoxBotonesMenuInicio"]
margin_left = 196.0
margin_top = 321.0
margin_right = 827.0
margin_bottom = 686.0
size_flags_horizontal = 4
custom_constants/separation = 16

[node name="Logo" type="TextureRect" parent="MarginContainerMenuInicio/VBoxBotonesMenuInicio/VBoxLogo"]
margin_right = 631.0
margin_bottom = 365.0
size_flags_horizontal = 0
texture = ExtResource( 9 )
script = ExtResource( 10 )

[connection signal="pressed" from="MarginContainerMenuInicio/VBoxBotonesMenuInicio/BtContinue" to="." method="_on_BtContinue_pressed"]
